--- a/site/site2/assets/css/common.css
+++ b/site/site2/assets/css/common.css
@@ -79,8 +79,8 @@
 }
 
 /*  폰트 */
-.score {
-    font-family: "SCoreDream";
+.nexon {
+    font-family: "NexonLv1Gothic";
     font-weight: 400;
 }
 
