--- a/site/site2/assets/css/footer.css
+++ b/site/site2/assets/css/footer.css
@@ -1,10 +1,41 @@
+/* fonts */
+@import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
+.nexon {
+    font-family: 'NexonLv1Gothic';
+    font-weight: 400;
+}
+#footerType {
+    background-color: #fff;
+}
+.footer__all {
+    display: flex;
+}
+.footer__top li {
+    list-style: none;
+}
+.footer__top li {
+    margin-top: 15px;
+}
+.footer__top li a {
+    line-height: 1.4;
+}
+.footer__bot {
+    padding-left: 100px;
+}
+.f__icon {
+    margin-top: 20px;
+    padding-right: 20px;
+}
+.f__icon .f__cir {
+    margin-right: 10px;
+}
 .footer__menu {
     display: flex;
     margin-bottom: 70px;
-    text-align: center;
+    justify-content: space-between;
 }
 .footer__menu > div {
-    width: 16%;
+    width: 100px;
 }
 .footer__menu > div h3 {
     font-size: 18px;
@@ -16,12 +47,31 @@
     margin-bottom: 10px;
     display: block;
 }
+.footer__menu ul li a {
+    text-align: left;
+}
 .footer__right {
     border-top: 1px solid #d9d9d9;
     text-align: center;
     padding-top: 40px;
     color: #666;
     line-height: 1.5;
+}
+.f__icon {
+    display: flex;
+}
+.f__cir {
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+    box-sizing: border-box;
+}
+.f__icon .f__icon01 {
+    width: 20px;
+    height: 20px;
+    padding-left: 13px;
+    padding-top: 13px;
 }
 
 @media (max-width: 960px ) {
@@ -36,17 +86,3 @@
         padding: 40px 0;
     }
 }
-
-/* @media (max-width: 768px) {
-    .footer__inner {
-        margin-left: 25px;
-    }
-    .footer__menu {
-        width: 768px;
-        display: flex;
-        margin-bottom: 20px;
-    }
-    .footer__right {
-        width: 720px;
-    }
-} */
