--- a/site/site2/assets/css/header.css
+++ b/site/site2/assets/css/header.css
@@ -1,96 +1,28 @@
+/* headerType */
+.header__wrap {
+    background: #f6f8fd;
+}
+
 .header__inner {
     width: 100%;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
+    height: 113px;
+    padding-top: 21px;
     box-sizing: border-box;
-    border-bottom: 1px solid #ccc;
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 10000;
-    background: #fff;
 }
 .header__logo {
-    width: 20%;
+    width: 100%;
     font-size: 30px;
     font-weight: 700;
-    text-transform: uppercase;
-}
-.header__logo em {
-    font-size: 18px;
-    font-weight: 400;
+    text-align: center;
+    margin-bottom: 25px;
 }
 .header__menu {
-    width: 60%;
     text-align: center;
 }
-.header__menu li {
-    display: inline;
-}
-.header__menu li a {
-    padding: 13px 30px;
-    margin: 0 5px;
-    transition: background-color 0.3s;
-}
-.header__menu li a:hover {
-    background-color: #F1F1F1;
-    border-radius: 5px;
-}
-.header__member {
-    width: 20%;
-    text-align: right;
-}
-.header__member a {
-    font-size: 16px;
-    border: 1px solid #000;
-    padding: 10px 30px;
-    border-radius: 50px;
-    transition: all 0.3s;
-}
-.header__member a:hover {
-    background-color: #000;
-    color: #fff;
-}
-.header__ham {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    z-index: 1000;
-    width: 50px;
-    height: 50px;
-    display: none;
-    cursor: pointer;
-}
-.header__ham span {
-    display: block;
-    background: #ccc;
-    width: 30px;
-    height: 2px;
-    border-radius: 5px;
-    margin-left: 10px;
-    margin-top: 5px;
-    transition: 0.25s margin 0.25s, 0.25s transform;
-}
-.header__ham span:nth-child(1){
-    margin-top: 18px;
-}
-.header__ham.active span {
-    transition: 0.25s margin, 0.25s transform 0.25s;
-}
-.header__ham.active span:nth-child(1){
-    margin-top: 25px;
-    margin-bottom: -7px;
-    transform: rotate(45deg);
-}
-.header__ham.active span:nth-child(2){
-    transform: rotate(45deg);
-}
-.header__ham.active span:nth-child(3){
-    margin-top: -2px;
-    transform: rotate(135deg);
+.header__menu ul {
+    justify-content: space-evenly;
+    display: flex;
+    list-style: none;
 }
 /* media */
 @media (max-width: 1300px){
