--- a/site/site2/assets/css/image.css
+++ b/site/site2/assets/css/image.css
@@ -1,70 +1,57 @@
-#imageType {
-    background-color: #f9f9f9;
-}
+/* imageType */
 .image__inner {
     display: flex;
     justify-content: space-between;
 }
 .image {
-    width: 49%;
-    height: 370px;
-    color: #fff;
-    padding: 200px 30px 30px 30px;
-    box-sizing: border-box;
-}
-.image.img1 {
-    background: url(../img/image01_01.jpg) no-repeat center;
-}
-.image.img2 {
-    background: url(../img/image01_02.jpg) no-repeat center;
-}
-.image__title {
-    font-size: 32px;
-    margin-bottom: 10px;
+    width: 32%;
     overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    position: relative;
+}
+.image__box {}
+.image__box img {
+    vertical-align: top;
+    width: 100%;
+    height: 100%;
 }
 .image__desc {
-    font-size: 16px;
-    font-weight: 300;
-    margin-bottom: 10px;
-    line-height: 1.5;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-}
-.image__btn {
-    font-size: 16px;
+    position: absolute;
+    left: 0;
+    bottom: -100px;
+    width: 100%;
+    padding: 23px 20px;
+    text-align: center;
+    backdrop-filter: blur(10px);
+    box-sizing: border-box;
+    background: #514E6751;
     color: #fff;
-    background-color: #cdcdcd40;
-    padding: 10px 20px;
-    display: inline-block;
+    transition: all 0.3s ease-in;
 }
-.image__btn.yellow {
-    background-color: #cdcdcd40;
+.image:hover .image__desc {
+    bottom: 0;
 }
+.image:hover .image__box img {
+    transform: scale(1.05);
+    transition: all 0.3s ease-in;
+}
+.img01 .image__desc {background: rgba(235, 77, 74, 0.5);}
+.img02 .image__desc {background: rgba(255, 208, 89, 0.5);}
+.img03 .image__desc {background: rgba(188, 181, 215, 0.5);}
 
-@media (max-width: 960px) {
+.img01 .image__desc h3 {color: #6c0506;}
+.img02 .image__desc h3 {color: #745a00}
+.img03 .image__desc h3 {color: #d0c8ff;}
 
+.img01 .image__desc .more {color: #6c0506;}
+.img02 .image__desc .more {color: #745a00}
+.img03 .image__desc .more {color: #d0c8ff;}
+.image__desc h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
 }
-@media (max-width: 600px) {
-    .image__inner {
-        flex-direction: column;
-    }
-    .image {
-        width: 100%;
-        padding: 205px 20px 20px 20px;
-    }
-    .image:first-child {
-        margin-bottom: 20px;
-    }
-    .image__title {
-        font-size: 24px;
-    }
-    .image__desc {
-        font-size: 16px;
-    }
+.image__desc .more {
+    font-size: 16px;
+}
+.image__desc .more:hover {
+    text-decoration: underline;
 }
