--- a/site/site2/assets/css/slider.css
+++ b/site/site2/assets/css/slider.css
@@ -85,96 +85,246 @@
     background-position: -60px -70px;
 }
 
+.slider__inner {
+    margin-top: 130px;
+}
+
 /* swiper */
 .swiper-slide {
-    background: url(../img/slider_bg01.jpg) no-repeat center / cover;
+    position: relative;
 }
+
 .swiper-slide .desc {
-    width: 1160px;
-    margin: 0 auto;
-    padding: 100px 20px;
-    box-sizing: border-box;
-}
-.swiper-slide .desc span {
-    font-size: 16px;
-    background-color: #fff;
-    padding: 1px 14px 0 14px;
-    border-radius: 30px;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-    display: inline-block;
+    color: #000;
+    position: relative;
+    padding-bottom: 100px;
 }
 .swiper-slide .desc h3 {
+    margin-top: 20px;
+    font-weight: 700;
     font-size: 110px;
-    font-weight: 300;
-    line-height: 1;
-    color: #fff;
-    text-transform: uppercase;
-    margin-bottom: 16px;
-    margin-left: -8px;
+    line-height: 105.5%;
 }
 .swiper-slide .desc p {
-    font-size: 20px;
-    font-weight: 300;
-    color: #fff;
-    line-height: 1.35;
-    margin-bottom: 130px;
+    margin-top: 20px;
+    font-size: 24px;
+    line-height: 1.4;
+    font-weight: 400;
 }
-.swiper-slide .desc .btn {}
 .swiper-slide .desc .btn a {
+    margin-top: 15px;
     font-size: 16px;
-    background-color: #fff;
+    color: #fff;
     padding: 11px 50px;
     display: inline-block;
+    background-color: #4857ec;
 }
-.swiper-slide .desc .btn a.black {
-    background: #000;
-    color: #fff;
+.swiper-slide .cir1 {
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+    background-color: #4857EC;
 }
-.swiper-button-next, .swiper-button-prev {
-    width: 25px !important;
-    height: 50px !important;
-    background: url(../img/slider_icon.svg);
+.swiper-slide .cir2 {
+    position: absolute;
+    top: 2%;
+    left: 34%;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background-color: #F7E36D;
+}
+.swiper-slide .cir3 {
+    position: absolute;
+    top: 50px;
+    left: 45%;
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    background-color: #2FEFB1;
+}
+.swiper-slide .cir4 {
+    position: absolute;
+    top: 66%;
+    left: 47%;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: #4857EC;
+}
+.swiper-slide .cir5 {
+    position: absolute;
+    top: 87%;
+    right: 17%;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #FF3344;
+}
+.swiper-slide .cir6 {
+    position: absolute;
+    top: 75%;
+    right: 4%;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #2FEFB1;
+}
+.swiper-slide .desc .slider_img01 {
+    box-sizing: border-box;
+    z-index: 1;
+    width: 30rem;
+    height: 30rem;
+    position: absolute;
+    right: -5%;
+    top: 5%;
+}
+.swiper-slide .desc .slider_img02 {
+    position: absolute;
+    top: 10%;
+    right: 13%;
+    z-index: 2;
+    width: 203px;
+    height: 183px;
+}
+.swiper-slide .desc .slider_img03 {
+    position: absolute;
+    top: 28%;
+    right: -2%;
+    z-index: 2;
+    width: 203px;
+    height: 224px;
+}
+.swiper-slide .desc .slider_img04 {
+    position: absolute;
+    top: 58%;
+    right: 17%;
+    z-index: 2;
+    width: 197px;
+    height: 193px;
 }
 .swiper-button-next {
-    background-position: -55px 0;
+    right: 25px !important;
+    background-image: url(../img/slider_icon02.svg);
+    background-repeat: no-repeat;
 }
-.swiper-button-next::after, .swiper-button-prev::after {
-    opacity: 0;
+.swiper-button-prev {
+    background-image: url(../img/slider_icon03.svg);
+    background-repeat: no-repeat;
 }
-
+.swiper-button-next::after,
+.swiper-button-prev:after {
+    display: none;
+}
 .swiper-pagination-bullet {
-    width: 16px !important;
-    height: 16px !important;
-    background-image: url(../img/slider_icon.svg) !important;
-    background-position: -20px -70px !important;
-    background-color: transparent !important;
-    opacity: 1 !important;
+    display: inline-block;
+    opacity: 1;
+    width: 16px;
+    height: 16px;
+    background-color: #FF3344;
 }
 .swiper-pagination-bullet-active {
-    background-position: 0px -70px !important;
+    top: 2px;
+    width: 20px;
+    height: 20px;
+    scale: 0.85;
+    background-color: #FF3344;
+    position: relative !important;
 }
-.swiper-button {
-    position: absolute;
-    left: 50%;
-    margin-left: 40px;
-    bottom: 24px;
-    z-index: 1000;
-    display: flex;
-}
-.swiper-button-stop {
-    background-image: url(../img/slider_icon.svg);
-    background-position: -60px -70px;
-    width: 16px;
-    height: 16px;
-}
-.swiper-button-play {
-    background-image: url(../img/slider_icon.svg);
-    background-position: -40px -70px;
-    width: 16px;
-    height: 16px;
+.swiper-pagination-bullet-active::before {
+    position: absolute !important;
+    left: 4px !important;
+    top: 4px !important;
+    content: '';
+    border-radius: 50%;
+    width: 12px !important;
+    height: 12px !important;
+    background-color: #fff !important;
 }
 
+/* media */
+@media (max-width: 1300px) {
+    .swiper-slide .desc .slider_img01 {
+        right: 0;
+        width: 20rem;
+        height: 20rem;
+    }
+    .swiper-slide .desc .slider_img02 {
+        top: 7%;
+        right: 12%;
+        width: 8rem;
+        height: 8rem;
+    }
+    .swiper-slide .desc .slider_img03 {
+        right: 2%;
+        width: 8rem;
+        height: 8rem;
+    }
+    .swiper-slide .desc .slider_img04 {
+        top: 40%;
+        width: 8rem;
+        height: 8rem;
+        right: 14%;
+    }
+    .swiper-slide .desc {
+        text-align: center;
+        width: 100%;
+    }
+    .swiper-slide .desc h3 {
+        font-size: 70px;
+    }
+}
+@media (max-width: 600px) {
+    .swiper-slide .desc {
+        padding: 80px 0;
+    }
+    .swiper-slide .desc h3 {
+        font-size: 30px;
+        line-height: 1.4;
+    }
+    .swiper-slide .desc p {
+        font-size: 16px;
+        margin-bottom: 40px;
+    }
+    .swiper-slide .desc .btn a {
+        padding: 10px 25px;
+    }
+    .swiper-slide .desc img {
+        width: 18rem;
+        height: 18rem;
+    }
+    .swiper-slide .desc .slider_img01 {
+        left: 45%;
+        z-index: -4;
+        position: absolute;
+        width: 15rem;
+        height: 15rem;
+    }
+    .swiper-slide .desc .slider_img02 {
+        left: 55%;
+        z-index: -3;
+        width: 5rem;
+        height: 5rem;
+
+    }
+    .swiper-slide .desc .slider_img03 {
+        left: 75%;
+        top: 20%;
+        z-index: -2;
+        width: 5rem;
+        height: 5rem;
+
+    }
+    .swiper-slide .desc .slider_img04 {
+        left: 50%;
+        z-index: -1;
+        width: 5rem;
+        height: 5rem;
+    }
+}
 @media (max-width: 960px) {
     .swiper-slide .desc {
         width: 100%;
@@ -199,22 +349,3 @@
         padding: 10px 25px;
     }
 }
-
-
-/* @media (max-width: 768px) {
-    .slider__img .desc span {
-        font-size: 16px;
-    }
-    .slider__img .desc h3 {
-        font-size: 70px;
-    }
-    .slider__img .desc p {
-        font-size: 20px;
-    }
-    .slider__arrow a.left {
-        display: none;
-    }
-    .slider__arrow a.right {
-        display: none;
-    }
-} */
