--- a/site/site2/assets/css/style.css
+++ b/site/site2/assets/css/style.css
@@ -5,6 +5,9 @@
 @import url("reset.css");
 @import url("common.css");
 
+/* swiper */
+@import url("swiper.css");
+
 /* section */
 @import url("header.css");
 @import url("slider.css");
