--- a/site/site2/assets/css/slider.css
+++ b/site/site2/assets/css/slider.css
@@ -275,8 +275,7 @@
     transition: all 0.5s 1s cubic-bezier(0.4, 0.02, 1, 1);
 }
 .swiper-slide .dots .d1 {
-    opacity: 0;
-    transform: translateY(50px);
+    transform: scale(0);
     transition: all 0.5s 1.1s cubic-bezier(0.4, 0.02, 1, 1);
 }
 .swiper-slide .dots .d2 {
@@ -331,8 +330,7 @@
     transform: translateY(0);
 }
 .swiper-slide-active .dots .d1 {
-    opacity: 1;
-    transform: translateY(0);
+    transform: scale(1);
 }
 .swiper-slide-active .dots .d2 {
     opacity: 1;
