--- a/javascript/assets/css/search.css
+++ b/javascript/assets/css/search.css
@@ -141,6 +141,23 @@ li {
     background-color: var(--htmlColor);
     color: #fff;
 }
+.search__list em {
+    float: right;
+    font-style: normal;
+}
+.search__list .line {
+    margin: 50px 0;
+}
+.search__list .line li {
+    background: #fff;
+    padding: 10px 20px;
+    margin-bottom: 5px;
+    border-radius: 15px;
+}
+.search__list .line li:hover {
+    background: #f9f9f9;
+    cursor: pointer;
+}
 .search__info {
     text-align: center;
     margin-bottom: 30px;
@@ -174,7 +191,6 @@ li {
     color: #fff;
     cursor: pointer;
 }
-
 .search__desc {
     border-bottom: 1px solid var(--htmlColor);
     border-bottom-style: dashed;
@@ -187,7 +203,6 @@ li {
     text-align: left;
     font-weight: 500;
 }
-
 .search__desc2 {
     border-bottom: 1px solid var(--htmlColor);
     border-bottom-style: dashed;
@@ -196,6 +211,24 @@ li {
     margin: 0 auto;
     text-align: left;
     font-weight: 500;
+}
+.search__click {
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+.search__click li {
+    display: inline;
+}
+.search__click li a {
+    display: inline-block;
+    border: 1px solid var(--htmlColor);
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin: 5px 0;
+}
+.search__click li a:hover {
+    background-color: var(--htmlColor);
+    color: #fff;
 }
 
 @media (max-width: 600px) {
