--- a/project5/asset/css/comment.css
+++ b/project5/asset/css/comment.css
@@ -2,9 +2,8 @@
     margin-top: 70px;
     margin-bottom: 50px;
 }
-
-#comment > h2 {
-    color: #6CC4B3;
+​#comment > h2 {
+    color: #6cc4b3;
     font-size: 20px;
     border-bottom: 1px solid #757575;
     padding-bottom: 10px;
@@ -22,7 +21,7 @@
 .com__td {
     padding-top: 30px;
 }
-#comment >  tbody tr td > img {
+#comment > tbody tr td > img {
     width: 16px;
     height: 16px;
 }
@@ -31,7 +30,7 @@
 }
 .com__like {
     margin-top: 3px;
-    width: 100px;   
+    width: 100px;
     height: 20px;
     justify-content: space-between;
     box-shadow: 3px 3px 6px 2px #dedede25;
@@ -46,7 +45,7 @@
     margin: 2px 0 2px 10px;
 }
 .com__like > p {
-    color: #6CC4B3;
+    color: #6cc4b3;
     font-size: px;
     margin-bottom: 10px;
 }
