--- a/project/asset/css/idPassConfirm.css
+++ b/project/asset/css/idPassConfirm.css
@@ -1,17 +1,18 @@
 /* 아이디 찾음 */
 
 .inner_height {
-    max-height: 520px;
+    height: 517px;
 }
 .search_contents {
     border-bottom: 1px dashed #6CC4B3;
-    margin-bottom: 22px;
+    margin-bottom: 20px;
 }
 .id_find {
-    margin-bottom: 22px;
+    margin-bottom: 20px;
 }
 .findLogo {
-    margin-bottom: 12px;
+    padding-top: 9px;
+    margin-bottom: 9px;
 }
 .findLogo img {
     width: 100%;
@@ -27,14 +28,15 @@
     font-size: 16px;
     color: #757575;
     text-align: center;
-    margin-bottom: 11px;
+    margin-bottom: 5px;
 }
 .searchIdBox .input__style {
     font-size: 16px;
     color: #757575;
     padding: 10px 20px;
     background-color: #f5f5f5;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    border-radius: 10px;
 }
 .go_login {
     text-align: center;
@@ -43,20 +45,25 @@
     font-size: 20px;
     color: #505050;
 }
+input:required {
+    font-family: 'SCoreDream';
+    color: #505050;
+}
 
 
 /* 비밀번호 찾음 */
 .inner_height2 {
-    max-height: 530px;
+    /* max-height: 542px; */
 }
 .id_find2 {
-    margin-bottom: 23px;
+    margin-bottom: 24.5px;
 }
 .findLogo2 {
     margin-bottom: 22px;
 }
 .findLogo2 img {
     width: 100%;
+    padding-top: 11px;
 }
 .id_find2 p {
     font-size: 24px;
