--- a/project/asset/css/join.css
+++ b/project/asset/css/join.css
@@ -4,15 +4,16 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    min-height: 647.2px;
 }
 .join__inner {
     width: 380px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 30px;
     box-sizing: border-box;
     position: relative;
-    border: 1px solid #505050;
+    border: 1px solid #6cc4b3;
 }
 .join__inner > h2 {
     font-size: 24px;
@@ -23,7 +24,7 @@
 .join__box > h3 {
     border-left: 1px solid #6cc4b3;
     padding-left: 10px;
-    margin: 0 0 8px 5px;
+    margin-bottom: 10px;
     color: #6cc4b3;
     font-size: 14px;
 }
@@ -92,7 +93,6 @@ input[id="youGenderMale"]:checked + label::after,
 input[id="youGenderFemale"]:checked + label::after {
     color: #6CC4B3;
 }
-
 #youPassc {
     margin-bottom: 10px;
 }
@@ -112,6 +112,12 @@ input[id="youGenderFemale"]:checked + label::after {
     top: 11px;
     right: 20px;
     font-weight: 400;
+    font-size: 14px;
+    margin-top: 2.5px;
+}
+input:required {
+    font-family: 'SCoreDream';
+    color: #505050;
 }
 
 .join__btn {
@@ -120,7 +126,8 @@ input[id="youGenderFemale"]:checked + label::after {
     background-color: #fff;
     font-size: 20px;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 9.05px;
     border-radius: 5px;
     cursor: pointer;
+    color: #505050;
 }
