--- a/project/asset/css/joinCompete.css
+++ b/project/asset/css/joinCompete.css
@@ -4,26 +4,27 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    min-height: 647.2px;
 }
 .join__inner {
     width: 380px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 30px;
     box-sizing: border-box;
     position: relative;
-    border: 1px solid #505050;
+    border: 1px solid #6CC4B3;
 }
 .join__inner > h2 {
     font-size: 24px;
     color: #505050;
     text-align: center;
     border-bottom: 1px dashed #6CC4B3;
-    padding-bottom: 30px;
-    margin-bottom: 123px;
+    padding-bottom: 29px;
+    margin-bottom: 110px;
 }
 .complete_contents {
-    padding-bottom: 94px;
+    padding-bottom: 111px;
     border-bottom: 1px dashed #6CC4B3;
     margin-bottom: 30px;
 }
