--- a/project/asset/css/loginBanner.css
+++ b/project/asset/css/loginBanner.css
@@ -15,16 +15,17 @@
 .lB__inner img {
     width: 60px;
     height: 60px;
-    margin-right: 13px;
+    margin-right: 10px;
 }
 .Myprofile {
     display: flex;
     font-size: 16px;
+    height: 45px;
 }
 .Myprofile > p {
     margin-right: 20px;
     color: #757575;
     box-sizing: border-box;
-    text-decoration: underline 1px dashed #6cc4b3;
+    border-bottom: 1px dashed #6cc4b3;
     text-underline-position: under;
 }
