--- a/project2/asset/css/loginBanner.css
+++ b/project2/asset/css/loginBanner.css
@@ -33,6 +33,7 @@
 }
 .Myprofile {}
 .Myprofile li {
+    /* margin-bottom: 10px; */
     display: inline-block;
     font-size: 16px;
     color: #757575;
