--- a/project/asset/css/board/boardComment.css
+++ b/project/asset/css/board/boardComment.css
@@ -1,10 +1,10 @@
-#comment {
+#boardComment {
     margin-top: 30px;
     margin-bottom: 50px;
     padding-bottom: 50px;
     border-bottom: 1px dashed #6cc4b3;
 }
-​#comment > h2 {
+​#boardComment > h2 {
     color: #6cc4b3;
     font-size: 20px;
     border-bottom: 1px solid #757575;
@@ -28,7 +28,7 @@
 .com__td {
     padding-top: 30px;
 }
-#comment > tbody tr td > img {
+#boardComment > tbody tr td > img {
     width: 16px;
     height: 16px;
 }
