--- a/project/asset/css/board/boardType.css
+++ b/project/asset/css/board/boardType.css
@@ -176,6 +176,9 @@ table tbody tr td:nth-child(2) a {
     font-size: 16px;
     margin-bottom: 20px;
 }
+.board_ranking_tr td > a{
+    color: #505050;
+}
 .table tr td {
     border-bottom: 1px dashed #6cc4b3;
     color: #505050;
@@ -211,11 +214,11 @@ table tbody tr td:nth-child(2) a {
     /* border-left: 1px solid #505050; */
 }
 .table tr:last-child td {
-    /* border-bottom: none; */
+    border-bottom: none;
 }
 .borad__table td a {
     color: #505050;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .borad__pages {
@@ -353,9 +356,13 @@ input:required {
         position: relative;
         display: flex;
     }
+    .board_ranking_tr > td a {
+        color: #505050;
+    }
     .bestTableCol:nth-child(1){
         max-width: auto;
         width: 100%;
+        color: #505050;
     }
     .board_ranking_tr td:nth-child(1){
         margin-bottom: 15px;
@@ -381,7 +388,7 @@ input:required {
         position: relative;
     }
     .table tr td {
-        padding: 7px 0 20px 0;
+        padding: 7px 0 27px 0;
     }
     .table tr td:nth-child(2){
         width: 100%;
@@ -391,7 +398,7 @@ input:required {
         position: absolute;
         left: 28px;
         top: 24px;
-        font-size: 13px;
+        font-size: 12px;
         border: none;
     }
     .table tr td:nth-child(4){
